--- a/CourseWork/MainWindow.xaml
+++ b/CourseWork/MainWindow.xaml
@@ -3,17 +3,46 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CourseWork"
+        xmlns:local="clr-namespace:CourseWork" xmlns:local1="clr-namespace:CourseWork.Views"
+        xmlns:local2="clr-namespace:CourseWork.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="1000">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type local2:SearchViewModel}">
+            <local1:SearchView/>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="291*"/>
-            <RowDefinition Height="92*"/>
-            <RowDefinition Height="37*"/>
+            <RowDefinition Height="32*"/>
+            <RowDefinition Height="253*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="1">
-            <Button Click="Button_Click" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="57*"/>
+            <ColumnDefinition Width="274*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.RowSpan="2" Grid.Row="0" Background="Bisque">
+            <ListView x:Name="ListViewMenu" SelectionChanged="ListViewMenu_SelectionChanged" Margin="0 50" Foreground="White" MinHeight="240" VerticalContentAlignment="Top" 
+                              Background="{x:Null}" BorderBrush="{x:Null}" 
+                              IsSynchronizedWithCurrentItem="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <ListViewItem Height="60"  >
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock VerticalAlignment="Center" Text="Cart" FontSize="20" FontFamily="Global Sans Serif" Margin="15,0,0,0" TextWrapping="Wrap"  />
+                    </StackPanel>
+                </ListViewItem>
+                <ListViewItem Height="60" >
+                    <StackPanel Orientation="Horizontal">
+                        <Button Command="{Binding ChangeCommand}" Width="100"/>
+                        <TextBlock VerticalAlignment="Center" Text="Search" FontSize="20" FontFamily="Global Sans Serif" Margin="15,0,0,0" TextWrapping="Wrap"  />
+                    </StackPanel>
+                </ListViewItem>
+            </ListView>
+        </Grid>
+        <Grid Grid.Row="0" Grid.Column="1">
+            
+        </Grid>
+        <Grid Grid.Row="1" Grid.Column="1" x:Name="MainGrid">
+            <ContentControl Content="{Binding CurrentViewModel}"/>
         </Grid>
     </Grid>
 </Window>
