--- a/CourseWork/MainWindow.xaml
+++ b/CourseWork/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:CourseWork"
         xmlns:view="clr-namespace:CourseWork.ViewModels"
         mc:Ignorable="d"
@@ -16,13 +17,27 @@
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="274*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="1">
+        
+        <StackPanel Grid.Row="1" Background="#734046">
             <RadioButton x:Name="homeRadio" Content="Home" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding ChangeCommand}" Checked="searchRadio_Checked"/>
             <RadioButton x:Name="searchRadio" Content="Search" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding ChangeCommand}" Checked="searchRadio_Checked"/>
             <RadioButton x:Name="settingsRadio" Content="Settings" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding ChangeCommand}" Checked="searchRadio_Checked"/>
         </StackPanel>
-        <Grid Grid.Row="0" Grid.Column="1">
-            
+        <Grid Grid.Row="1">
+            <RadioButton x:Name="aboutRadio" Content="About" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding ChangeCommand}" VerticalAlignment="Bottom" Checked="searchRadio_Checked"/>
+            <Button Click="Button_Click"/>
+        </Grid>
+        <Grid Grid.Row="0" Grid.Column="1" Background="#734046">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="1">
+                <Menu Background="Transparent" VerticalAlignment="Center">
+                    <materialDesign:PackIcon Kind="EmoticonManProfile" Width="50" Height="50" Margin="0,0,5,0"/>
+                    <materialDesign:PackIcon Kind="Gear" Width="50" Height="50" Margin="0,0,0,5"/>
+                </Menu>
+            </Grid>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="1" x:Name="MainGrid">
             <ContentControl Content="{Binding CurrentViewModel}"/>
