--- a/CourseWork/Views/AuthView.xaml
+++ b/CourseWork/Views/AuthView.xaml
@@ -3,25 +3,37 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:CourseWork.Views"
         xmlns:viewmodel ="clr-namespace:CourseWork.ViewModels"
         mc:Ignorable="d"
-        Title="AuthView" Height="450" Width="903.226">
+        Title="AuthView" Height="500" Width="350">
     <Grid>
-        <Grid.Background>
-            <ImageBrush ImageSource="E:\2nd course\OOP\CW\CourseWork\CourseWork\Resources\a23.jpg"/>
-        </Grid.Background>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="142*"/>
-            <RowDefinition Height="170*"/>
-            <RowDefinition Height="41*"/>
-            <RowDefinition Height="34*"/>
-            <RowDefinition Height="33*"/>
-        </Grid.RowDefinitions>
-        <Grid Margin="0,0.6,-0.4,8.8" Grid.Row="1" >
-            <TextBox x:Name="login_textbox" Text="{Binding login}" Margin="0,-142,412.2,0"/>
-            <PasswordBox x:Name="password_textbox" Height="50" PasswordChanged="PasswordBox_PasswordChanged" Margin="0,55,412.2,56"/>
-            <Button Margin="0,105,412.2,-113" Command="{Binding AuthCommand}"/>
+        <Rectangle Height="280" VerticalAlignment="Top">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#a05344"/>
+                    <GradientStop Color="#321f28" Offset="1"/>
+                    <GradientStop Color="#734046" Offset="0.546"/>
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle Width="280" Height="240" VerticalAlignment="Bottom" Margin="0,80" RadiusY="10" RadiusX="10" Fill="White">
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
+            </Rectangle.Effect>
+        </Rectangle>
+        <Grid VerticalAlignment="Bottom" Margin="35,80" Height="240">
+            <Label Content="LOGIN" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" Foreground="Gray" FontSize="18"/>
+            <StackPanel VerticalAlignment="Center" Margin="15">
+                <TextBox Margin="0,10" materialDesign:HintAssist.Hint="Email" Text="{Binding login}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>
+                <PasswordBox Margin="0,10" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="18" x:Name="password_textbox" PasswordChanged="PasswordBox_PasswordChanged"/>
+            </StackPanel>
         </Grid>
+        <Button Width="150" Command="{Binding AuthCommand}" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,65" Content="LOGIN"/>
+        <materialDesign:PackIcon Kind="Home" Width="100" Height="100" VerticalAlignment="Top" Margin="125,30,0,0"/>
+        <!--<TextBox x:Name="login_textbox" Text="{Binding login}" Margin="0,-142,412.2,0"/>
+            <PasswordBox x:Name="password_textbox" Height="50" PasswordChanged="PasswordBox_PasswordChanged" Margin="0,55,412.2,56"/>
+            <Button Margin="0,105,412.2,-113" Command="{Binding AuthCommand}"/>-->
     </Grid>
 </Window>
