--- a/CourseWork/Views/SearchView.xaml
+++ b/CourseWork/Views/SearchView.xaml
@@ -3,16 +3,38 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:CourseWork.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
-    <Grid>
+    <Grid Background="#a05344">
         <Grid.RowDefinitions>
-            <RowDefinition Height="46*"/>
-            <RowDefinition Height="403*"/>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="380*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <Label Content="Search View" FontSize="16"/>
-        </Grid>        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="580*"/>
+            <ColumnDefinition Width="210*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Row="0" Grid.ColumnSpan="2">
+            <materialDesign:Card Margin="10,10,10,0" UniformCornerRadius="5" materialDesign:ShadowAssist.ShadowDepth="Depth4">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <TextBox Height="30" Width="250" BorderBrush="Black"/>
+                    <Button/>
+                </StackPanel>
+            </materialDesign:Card>
+        </Grid>
+        <Grid Grid.Column="1" Grid.Row="1">
+            <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth4" Margin="0,10,10,10" UniformCornerRadius="5">
+
+            </materialDesign:Card>
+        </Grid>
+        <Grid Grid.Row="1" Grid.Column="0">
+            <materialDesign:Card Margin="10,10,10.2,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
+                <Grid>
+                    
+                </Grid>
+            </materialDesign:Card>
+        </Grid>
     </Grid>
 </UserControl>
