--- a/CourseWork/Views/HomeView.xaml
+++ b/CourseWork/Views/HomeView.xaml
@@ -18,15 +18,9 @@
             <Label Content="Home View" FontSize="16"/>
         </Grid>
         <Grid Grid.Row="1">
-            <Menu>
-                <Menu.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#734046"/>
-                        <GradientStop Color="#a05344" Offset="1"/>
-                        <GradientStop Color="#734046" Offset="0.546"/>
-                    </LinearGradientBrush>
-                </Menu.Background>
-                <Menu.ItemsPanel>
+            <materialDesign:Card Margin="10,10,10,10" UniformCornerRadius="5" materialDesign:ShadowAssist.ShadowDepth="Depth4">
+                <Menu>
+                    <Menu.ItemsPanel>
                     <ItemsPanelTemplate>
                         <DockPanel HorizontalAlignment="Center"/>
                     </ItemsPanelTemplate>
@@ -36,16 +30,20 @@
                 <MenuItem Header="Шины"/>
                 <MenuItem Header="Инструмент"/>
             </Menu>
+            </materialDesign:Card>
         </Grid>
         <Grid Grid.Row="2" >
+            <materialDesign:Card Margin="10,10,10,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <TextBox Width=" 400" VerticalAlignment="Center">
  
             </TextBox>
             <Button Width="125" Height="25" />
             </StackPanel>
+            </materialDesign:Card>
         </Grid>
         <Grid Grid.Row="3">
+            <materialDesign:Card Margin="10,10,10,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
             <ListBox ItemsSource="{Binding Parts}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
@@ -70,6 +68,7 @@
                     </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
             </ListBox>
+            </materialDesign:Card>
         </Grid>
     </Grid>
 </UserControl>
