--- a/CourseWork/Resources/DataTemplates.xaml
+++ b/CourseWork/Resources/DataTemplates.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:CourseWork.ViewModels" xmlns:local1="clr-namespace:CourseWork.Views">
+                    xmlns:local="clr-namespace:CourseWork.ViewModels" xmlns:local1="clr-namespace:CourseWork.Views"
+                    xmlns:admin="clr-namespace:CourseWork.ViewModels.AdminViewModels"
+                    xmlns:adminV="clr-namespace:CourseWork.Views.AdminViews">
     <DataTemplate DataType="{x:Type local:SearchViewModel}">
         <local1:SearchView/>
     </DataTemplate>
@@ -19,5 +21,25 @@
     <DataTemplate DataType="{x:Type local:SettingsViewModel}">
         <local1:SettingsView/>
     </DataTemplate>
-    
+    <DataTemplate DataType="{x:Type local:FullInfoViewModel}">
+        <local1:FullInfoView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type local:LoginViewModel}">
+        <local1:LoginView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type local:RegViewModel}">
+        <local1:RegView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type local:ConfirmOrderViewModel}">
+        <local1:ConfirmOrderView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type admin:HomeAdminVM}">
+        <adminV:AdminHomeView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type admin:UsersAdminVM}">
+        <adminV:AdminUsersView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type admin:OrdersAdminVM}">
+        <adminV:OrdersAdminView/>
+    </DataTemplate>
 </ResourceDictionary>
