--- a/CourseWork/Resources/MenuButton.xaml
+++ b/CourseWork/Resources/MenuButton.xaml
@@ -11,7 +11,7 @@
                         <Grid VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
                               Background="{TemplateBinding Background}">
-                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{TemplateBinding Property=Content}" Foreground="white">
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{TemplateBinding Property=Content}" Foreground="white" FontFamily="Helvetica">
  
                             </TextBlock>
                         </Grid>
