--- a/CourseWork/Views/AuthView.xaml
+++ b/CourseWork/Views/AuthView.xaml
@@ -9,31 +9,6 @@
         mc:Ignorable="d"
         Title="AuthView" Height="500" Width="350">
     <Grid>
-        <Rectangle Height="280" VerticalAlignment="Top">
-            <Rectangle.Fill>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#a05344"/>
-                    <GradientStop Color="#321f28" Offset="1"/>
-                    <GradientStop Color="#734046" Offset="0.546"/>
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <Rectangle Width="280" Height="240" VerticalAlignment="Bottom" Margin="0,80" RadiusY="10" RadiusX="10" Fill="White">
-            <Rectangle.Effect>
-                <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
-            </Rectangle.Effect>
-        </Rectangle>
-        <Grid VerticalAlignment="Bottom" Margin="35,80" Height="240">
-            <Label Content="LOGIN" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" Foreground="Gray" FontSize="18"/>
-            <StackPanel VerticalAlignment="Center" Margin="15">
-                <TextBox Margin="0,10" materialDesign:HintAssist.Hint="Email" Text="{Binding login}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>
-                <PasswordBox Margin="0,10" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="18" x:Name="password_textbox" PasswordChanged="PasswordBox_PasswordChanged"/>
-            </StackPanel>
-        </Grid>
-        <Button Width="150" Command="{Binding AuthCommand}" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,65" Content="LOGIN"/>
-        <materialDesign:PackIcon Kind="Home" Width="100" Height="100" VerticalAlignment="Top" Margin="125,30,0,0"/>
-        <!--<TextBox x:Name="login_textbox" Text="{Binding login}" Margin="0,-142,412.2,0"/>
-            <PasswordBox x:Name="password_textbox" Height="50" PasswordChanged="PasswordBox_PasswordChanged" Margin="0,55,412.2,56"/>
-            <Button Margin="0,105,412.2,-113" Command="{Binding AuthCommand}"/>-->
+        <ContentControl Content="{Binding CurrentViewModel}"/>
     </Grid>
 </Window>
