--- a/CourseWork/Views/SearchView.xaml
+++ b/CourseWork/Views/SearchView.xaml
@@ -19,8 +19,8 @@
         <Grid Grid.Row="0" Grid.ColumnSpan="2">
             <materialDesign:Card Margin="10,10,10,0" UniformCornerRadius="5" materialDesign:ShadowAssist.ShadowDepth="Depth4">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <TextBox Height="30" Width="250" BorderBrush="Black"/>
-                    <Button/>
+                    <TextBox  Width="250" VerticalAlignment="Center" BorderThickness="1" BorderBrush="Black" Template="{StaticResource TextBoxBaseControlTemplate}"/>
+                    <Button />
                 </StackPanel>
             </materialDesign:Card>
         </Grid>
@@ -30,10 +30,36 @@
             </materialDesign:Card>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="0">
-            <materialDesign:Card Margin="10,10,10.2,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
-                <Grid>
-                    
-                </Grid>
+            <materialDesign:Card Margin="10,10,10,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
+                <ListBox ItemsSource="{Binding Parts}" x:Name="partList" Height="360">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border CornerRadius="6" BorderThickness="1" DockPanel.Dock="Top" BorderBrush="Transparent">
+                                <Border.InputBindings>
+                                    <MouseBinding MouseAction="{x:Static MouseAction.LeftDoubleClick}"
+                              Command="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=DataContext.OpenFullInfo}"
+                              CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=OpenFullInfo}" />
+                                </Border.InputBindings>
+                                <StackPanel Orientation="Vertical">
+                                    <materialDesign:Card UniformCornerRadius="10">
+                                        <StackPanel Orientation="Vertical" Height=" 200" Width="120">
+
+                                            <Image Width="120" Height="120" Margin="5" Source="{Binding ImageLink}" />
+                                            <TextBlock Text="{Binding Name}"/>
+                                            <Separator Background="Black"/>
+                                            <Button Command="{Binding AddToCartCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}}"/>
+                                        </StackPanel>
+                                    </materialDesign:Card>
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel />
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                </ListBox>
             </materialDesign:Card>
         </Grid>
     </Grid>
